Fix up the z-index of the about url

--- a/assets/themes/tinylab.org/css/style.css
+++ b/assets/themes/tinylab.org/css/style.css
@@ -1177,7 +1177,6 @@ short_prev_next {
         margin-left: 22px
     }
     #phone-navbar {
-        z-index: 99999999;
         display: block;
         text-align: center;
         margin-top: 10px;
@@ -1191,6 +1190,7 @@ short_prev_next {
         color: #0c0;
     }
     #phone-navbar a#about {
+        z-index: 999999999;
         color: #0cc;
     }
     #float-box-wrap {
